--- a/pom.xml
+++ b/pom.xml
@@ -45,9 +45,20 @@
             <version>4.0.1</version>
         </dependency>
         <dependency>
+            <groupId>org.jboss.weld.se</groupId>
+            <artifactId>weld-se-shaded</artifactId>
+            <version>4.0.2.Final</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jboss.weld</groupId>
+            <artifactId>weld-junit4</artifactId>
+            <version>3.0.0.Final</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
     <build>
