--- a/pom.xml
+++ b/pom.xml
@@ -31,13 +31,12 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>1.2.6</version>
-            <scope>compile</scope>
+            <version>1.2.11</version>
         </dependency>
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>7.0.1.Final</version>
+            <version>7.0.5.Final</version>
         </dependency>
         <dependency>
             <groupId>org.glassfish</groupId>
@@ -58,7 +57,7 @@
         <dependency>
             <groupId>org.jboss.weld</groupId>
             <artifactId>weld-junit4</artifactId>
-            <version>3.0.0.Final</version>
+            <version>3.1.0.Final</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -149,7 +148,7 @@
                 <configuration>
                     <encoding>${encoding}</encoding>
                     <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
+                    <failsOnError>false</failsOnError>
                     <failOnViolation>false</failOnViolation>
                 </configuration>
             </plugin>
@@ -192,6 +191,21 @@
                     <locales>ja</locales>
                 </configuration>
             </plugin>
+            <plugin>
+                <groupId>com.spotify.fmt</groupId>
+                <artifactId>fmt-maven-plugin</artifactId>
+                <version>2.19</version>
+                <configuration>
+                    <verbose>true</verbose>
+                </configuration>
+                <executions>
+                    <execution>
+                        <goals>
+                            <goal>format</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
     <reporting>
@@ -209,7 +223,7 @@
                     <configLocation>config/checkstyle/checkstyle.xml</configLocation>
                     <encoding>${encoding}</encoding>
                     <consoleOutput>true</consoleOutput>
-                    <failsOnError>true</failsOnError>
+                    <failsOnError>false</failsOnError>
                     <failOnViolation>false</failOnViolation>
                 </configuration>
                 <reportSets>
